Fix spacing in community section

--- a/source/stylesheets/base/_typography.scss
+++ b/source/stylesheets/base/_typography.scss
@@ -6,7 +6,7 @@ body {
   font-family: 'Lato', serif;
   font-size: 16px;
   margin:0;
-  padding:2em 2em 5em; 
+  padding:2em 2em 5em;
   background:rgb(253, 253, 253);
   margin:auto;
   color:rgb(10, 10, 10);
@@ -22,13 +22,13 @@ a:hover {color:#606;}
 a:active {color:#900; outline:none;}
 
 h1 {
-  font-family: 'Poppins', serif; 
+  font-family: 'Poppins', serif;
   font-size:320%;
   margin:0 0 0.3em;
 }
 
 h2 {
-  font-family: 'Poppins', serif; 
+  font-family: 'Poppins', serif;
   font-size:200%;
   margin:1em 0 0.8em;
 }
@@ -41,7 +41,7 @@ h3 {
 
 h4 {
   font-family: 'Poppins', serif;
-  font-size:150%;
+  font-size:130%;
 }
 
 h5 {
@@ -50,13 +50,13 @@ h5 {
 }
 
 h6 {
-  font-family: 'Poppins', serif; 
+  font-family: 'Poppins', serif;
   font-size:100%;
   margin:1.5em 0 0.8em;
 }
 
 p {
-  font-size:100%;
+  font-size:110%;
   margin:1em 0 0;
   line-height: 1.8;
 }
