--- a/source/stylesheets/pages/_community.scss
+++ b/source/stylesheets/pages/_community.scss
@@ -22,6 +22,7 @@
       p {
         margin-left: 20px;
         color: #656565;
+        font-weight: 400;
       }
       position: relative;
       background-color: white;
@@ -84,6 +85,7 @@
     color: #656565;
     p.repo-description {
       margin-top: 0;
+      font-weight: 400;
     }
   }
 
@@ -151,6 +153,7 @@
       p.description {
         padding: 0 20px;
         margin-top: 5px;
+        font-weight: 400;
       }
     }
 
